Proto-07/kube/mango.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mango-svc
  labels:
    app: mango
spec:
  ports:
    - name: https
      port: 8000
      protocol: TCP
      targetPort: 5678  
  selector:
    app: mango

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mango
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mango
  template:
    metadata:
      labels:
        app: mango
    spec:
      serviceAccountName: mango-acct
      containers:
        - name: main
          image: hashicorp/http-echo
          imagePullPolicy: IfNotPresent
          args:
            - "-text=juicy mango"
          ports:
            - containerPort: 5678
          volumeMounts:
            - name: tls-cert-volume
              mountPath: /var/config/tls
              readOnly: true
      volumes:
        - name: tls-cert-volume
          secret:
            secretName: mango-credential
